<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_splash"
    android:padding="@dimen/mp_20"
    android:paddingStart="@dimen/mp_25"
    android:paddingEnd="@dimen/mp_25"
    tools:context=".ui.SplashActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/sp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mp_40"
        android:src="@mipmap/ic_splash_title"
        android:textColor="@color/text_000"
        android:textSize="@dimen/text_26"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sp_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mp_20"
        android:text="@string/splash_content"
        android:textColor="@color/text_FFF"
        android:textSize="@dimen/text_14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sp_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sp_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mp_40"
        android:layout_marginRight="@dimen/mp_40"
        android:layout_marginBottom="@dimen/mp_120"
        android:background="@drawable/bg_start_button"
        android:text="@string/splash_start"
        android:textAllCaps="false"
        android:textColor="@color/text_FFF"
        android:textSize="@dimen/text_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sp_privacy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mp_25"
        android:text="@string/splash_privacy_policy"
        android:textColor="@color/text_888"
        android:textSize="@dimen/text_12"
        app:layout_constraintEnd_toEndOf="@id/sp_start"
        app:layout_constraintStart_toStartOf="@id/sp_start"
        app:layout_constraintTop_toBottomOf="@id/sp_start" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/sp_check"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@drawable/check_bg_checked"
        android:button="@null"
        android:checked="true"
        app:layout_constraintBottom_toBottomOf="@id/sp_privacy"
        app:layout_constraintEnd_toStartOf="@id/sp_privacy"
        app:layout_constraintTop_toTopOf="@id/sp_privacy" />

    <ProgressBar
        android:id="@+id/sp_progress"
        style="@style/CustomProgressBar"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginBottom="@dimen/mp_40"
        android:max="100"
        android:orientation="horizontal"
        android:progress="0"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
